# skeleton

./: .gitignore  .linter-ignore  MAINTAINERS  Makefile  OWNERS  gdbus.mk  groups  meson.build  project.config  rules.mk  start_services  stop_services
bmcctl/: control_bmc_obj.c
bmcctl-barreleye/: Makefile
boardvpd/: Makefile
configs/: Barreleye.py  Firestone.py  Garrison.py  Lanyang.py  Palmetto.py  Romulus.py  S2600wf.py  Swift.py  Wfp.py  Witherspoon.py  Zaius.py  setup.py
fan_algorithm/: Makefile  fan_algorithm.c  i2craw.c
fanctl/: Makefile  fan_control.c  fan_generic_obj.c
flashbios/: flash_bios_obj.c
gdbus/: codegen
gdbus/interfaces/: openbmc_intf.c  openbmc_intf.h
gdbus/xml/: openbmc_intf.xml
gpiodaemon/: CMakeLists.txt  gpiodaemon.service
gpiodaemon/include/: gpiodaemon.hpp  gpioutils.hpp
gpiodaemon/src/: gpiodaemon.cpp  gpioutils.cpp
hacks/: Makefile  startup_hacks.sh
hostcheckstop/: Makefile  host_checkstop_obj.c
hostwatchdog/: Makefile  host_watchdog_obj.c
hwmon/: Makefile
hwmon-barreleye/: Makefile  hwmons_barreleye.c
includes/: gpio-init-gdbus.c  gpio-init-sdbus.c  gpio.c  gpio.h  object_mapper.c  object_mapper.h  openbmc.h  sensor_threshold.c  sensor_threshold.h
interfaces/: button.c  button.h  control.c  control.h  control_host.c  control_host.h  eventlog.c  eventlog.h  flash.c  flash.h  fru.c  fru.h  host_control.c  host_control.h  led.c  led.h  openbmc_intf.c  openbmc_intf.h  power_control.c  power_control.h  sensor.c  sensor.h  sensor2.c  sensor2.h  sensor_threshold.c  sensor_threshold.h  watchdog.c  watchdog.h
ledctl/: led_controller.c
libopenbmc_intf/: GPIOS.md  Makefile  gpio.c  gpio.h  gpio_configs.c  gpio_configs.h  gpio_json.c  gpio_json.h  meson.build  openbmc.h  openbmc_intf.c  openbmc_intf.h  openbmc_intf.xml  power_gpio.c  power_gpio.h
objects/: board_vpd_obj.c  button_power_obj.c  button_reset_obj.c  chassis_identify_obj.c  control_bmc_barreleye.c  control_bmc_obj.c  control_host_obj.c  fan_algorithm.c  fan_generic_obj.c  flash_bios_obj.c  flasher_obj.c  fru_board_obj.c  fru_generic_obj.c  host_checkstop_obj.c  host_control_obj.c  host_watchdog_obj.c  host_xstop_obj.c  hwmons.c  hwmons_barreleye.c  hwmons_palmetto.c  i2craw.c  info.c  led_controller.c  led_controller_new.c  openbmc_utilities.c  openbmc_utilities.h  pcie_slot_present_obj.c  power_control_obj.c  sensor_host_status_obj.c  sensor_occ_obj.c  sensor_temperature_ambient_obj.c
objects/pflash/: Makefile  ast-sf-ctrl.c  ast.h  config.h  io.h  pflash.c  powerpc_io.c  sfc-ctrl.c  sfc-ctrl.h
objects/pflash/ccan/: Makefile.inc
objects/pflash/ccan/array_size/: array_size.h
objects/pflash/ccan/array_size/test/: compile_fail.c  run.c
objects/pflash/ccan/build_assert/: build_assert.h
objects/pflash/ccan/build_assert/test/: compile_fail-expr.c  compile_fail.c
objects/pflash/ccan/check_type/test/: compile_fail-check_type_unsigned.c  run.c
objects/pflash/ccan/container_of/test/: compile_fail-bad-type.c
objects/pflash/ccan/endian/: endian.h
objects/pflash/ccan/endian/test/: compile_ok-constant.c  run.c
objects/pflash/libflash/: ffs.h  libffs.h  libflash-priv.h  libflash.c  libflash.h
objects/pflash/libflash/test/: Makefile
op-flasher/: Makefile  flasher_obj.c
op-flasher/pflash/: arm_io.c  progress.c  progress.h
op-flasher/pflash/ccan/array_size/test/: compile_fail-function-param.c
op-flasher/pflash/ccan/build_assert/test/: compile_ok.c  run-BUILD_ASSERT_OR_ZERO.c
op-flasher/pflash/ccan/check_type/: check_type.h
op-flasher/pflash/ccan/container_of/: container_of.h
op-flasher/pflash/ccan/container_of/test/: run.c  (+2 more)
op-flasher/pflash/libflash/: libffs.c  libflash.c
op-flasher/pflash/libflash/test/: test-flash.c
op-hostctl/: control_host_obj.c  meson.build
op-pwrctl/: Makefile  meson.build  power_control_obj.c
op-pwrctl/pgood_wait/: Makefile  meson.build  pgood_wait.c
pciedetect/: Makefile  pcie_slot_present_obj.c
phosphor-host-checkstop/: .gitignore  Makefile.am  argument.cpp  argument.hpp  checkstop.cpp  checkstop.hpp  configure.ac  mainapp.cpp  monitor.cpp  monitor.hpp
phosphor-host-checkstop/test/: Makefile.am  utest.cpp
phosphor-inventory/: Makefile.am  app.cpp  configure.ac  manager.cpp  manager.hpp
phosphor-inventory/test/: Makefile.am  test.cpp
pwrbutton/: button_power_obj.c
pychassisctl/: chassis_control.py  setup.py
pydownloadmgr/: download_manager.py  setup.py
pyfanctl/: fan_control.py  setup.py
pyflashbmc/: bmc_update.py  setup.py
pyhwmon/: hwmon.py  setup.py
pyinventorymgr/: inventory_items.py  setup.py  sync_inventory_items.py
pyinventorymgr/obmc/inventory/: __init__.py
pyipmitest/: ipmi_debug.py  setup.py
pysensormgr/: sensor_manager2.py  setup.py
pystatemgr/: discover_system_state.py  setup.py
pysystemmgr/: setup.py  system_manager.py
pysystemmgr/obmc/system/: __init__.py
pytools/: gpioutil  obmcutil  obmcutil-completion.sh  obmcutil.sh  openbmc  setup.py
rfc/entity-manager/: README.md  fru_device.py  overlay_gen.py  platform_scan.py  setup.py
rfc/entity-manager/configurations/: 1Ux16 Riser.json  8X25 HSBP.json  F2U12X35S3P_riser.json  Intel Front Panel.json  R1000 Chassis.json  R2000 Chassis.json  SAS Module.json  WFT Baseboard.json
rfc/entity-manager/examples/: flattened.json  flattened1.json  frus.json  frus1.json  system.json  system1.json
rfc/entity-manager/overlay_templates/: eeprom.template  pwmtach.template  tmp421.template  tmp75.template
rfc/entity-manager/unittests/: test_fru_device.py  test_platform_scan.py
rfc/entity-manager/utils/: generic.py
rstbutton/: button_reset_obj.c
utexample/: Makefile.am  configure.ac  mac.cpp  mac.h  reboot.cpp  reboot.h  sensor.cpp  sensor.h
utexample/test/: Makefile.am  mac_unittest.cpp  reboot_unittest.cpp  sensor_unittest.cpp
xml/: apps.txt  button.xml  chassis_control.xml  control.xml  control_host.xml  eventlog.xml  fan.xml  flash.xml  fru.xml  host_control.xml  ipmi.xml  led.xml  openbmc_intf.xml  parameter.xml  power_control.xml  psu.xml  sensor.xml  sensor2.xml  sensor_threshold.xml  watchdog.xml
(+2 files in other folders)
